--- a/preview.html
+++ b/preview.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>HA-Powercard v2.2.0 Preview</title>
+  <title>HA-Powercard v2.2.1 Preview</title>
   <style>
     * {
       box-sizing: border-box;
@@ -126,7 +126,7 @@
 </head>
 <body>
   <div class="preview-header">
-    <h1>⚡ HA-Powercard <span class="version">v2.2.0</span></h1>
+    <h1>⚡ HA-Powercard <span class="version">v2.2.1</span></h1>
     <p>Interactive preview - adjust sliders to simulate power values</p>
   </div>
   
@@ -170,15 +170,15 @@
     <ha-powercard id="powercard"></ha-powercard>
     
     <div class="features">
-      <h3>v2.2.0 Features</h3>
+      <h3>v2.2.1 Features</h3>
       <ul>
+        <li>Device panels below all breakers</li>
         <li>Energy values: Wh → kWh conversion</li>
         <li>Monitored vs Unmonitored totals</li>
         <li>Sub-device support (see Kitchen)</li>
         <li>Auto-scaling responsive layout</li>
         <li>Properly aligned device tables</li>
         <li>Hourly average tracking</li>
-        <li>System-wide averages API</li>
         <li>Click breakers to collapse/expand</li>
       </ul>
     </div>
